--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -1,5 +1,10 @@
 .contacts-list {
   overflow-y: scroll;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .contacts-list-row {
