--- a/public/themes/dark.css
+++ b/public/themes/dark.css
@@ -111,3 +111,9 @@ button.button.button-delete {
   border-color: #28f;
   box-shadow: 0 0 3px #28f;
 }
+
+.contact-log.item-list .contact-log-item-date {
+  font-style: italic;
+  color: #555;
+  font-size: 0.75em;
+}
