sync animation ready

--- a/public/themes/dark.css
+++ b/public/themes/dark.css
@@ -124,3 +124,8 @@ button.button.button-delete {
   font-size: 3em;
   text-align: center;
 }
+
+.loader-wrapper {
+  padding: 0.25em;
+  background: white;
+}
